[package]
name = "cognito_bot"
version = "0.1.3"
authors = ["Artem Khomenko <_mag12@yahoo.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
log = "0.4.11"
futures = "0.3.5"
tokio = { version =  "0.2.22", features = ["rt-threaded", "macros", "time"] }
pretty_env_logger = "0.4.0"
teloxide = "0.3.1"

# Used to setup a webhook
warp = "0.2.4"
reqwest = "0.10.7"
serde_json = "1.0.57"

# My
arraylib = "0.3.0"
rand = "0.8.3"

# Database
once_cell = "1.4.0"
tokio-postgres = { version = "0.5.5", features = ["with-chrono-0_4"] }
